--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ piston_window = "0.120.0"
 pistoncore-sdl2_window = "0.67.0"
 piston2d-opengl_graphics = "0.78.0"
 image = "0.23.14"
+geo = "0.18.0"
+geo-visibility = "0.4.0"
