--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gfx_device_gl = "0.16.2"
+graphics_buffer = { version = "0.7.7", features = ["piston_window_texture"] }
 piston_window = "0.120.0"
 pistoncore-sdl2_window = "0.67.0"
 piston2d-opengl_graphics = "0.78.0"
