--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ld49"
+name = "colorways"
 version = "0.1.0"
 edition = "2018"
 
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 bitflags = "1.3.2"
+graphics_buffer = { version = "0.7.7", features = ["piston_window_texture"] }
 piston_window = "0.120.0"
 pistoncore-sdl2_window = "0.67.0"
 piston2d-opengl_graphics = "0.78.0"
