--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 
 [dependencies]
 bitflags = "1.3.2"
-graphics_buffer = { version = "0.7.7", features = ["piston_window_texture"] }
+# graphics_buffer = { version = "0.7.7", features = ["piston_window_texture"] }
+graphics_buffer = { path = "../graphics_buffer", features = ["piston_window_texture"] }
 piston_window = "0.120.0"
 pistoncore-sdl2_window = "0.67.0"
 piston2d-opengl_graphics = "0.78.0"
