--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,10 @@ edition = "2018"
 
 [dependencies]
 bitflags = "1.3.2"
-# graphics_buffer = { version = "0.7.7", features = ["piston_window_texture"] }
-graphics_buffer = { path = "../graphics_buffer", features = ["piston_window_texture"] }
 piston_window = "0.120.0"
 pistoncore-sdl2_window = "0.67.0"
 piston2d-opengl_graphics = "0.78.0"
+piston2d-opengl_framebuffer = { git = "https://github.com/orez-/piston2d-opengl_framebuffer" }
 image = "0.23.14"
 geo = "0.18.0"
 geo-clipper = "0.7.0"
